// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AbsencePeriods /> should add a period 1`] = `
.c4 {
  padding: 0;
  font-size: 1rem;
  text-align: left;
  line-height: inherit;
  width: 7em;
  border-radius: 0.25rem;
  border: 1px solid #c9d3df;
  padding: 0.625rem 0.25rem;
  border-color: #c9d3df;
}

.c4::-webkit-outer-spin-button,
.c4::-webkit-inner-spin-button {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  margin: 0;
}

.c6 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  padding: 0;
  vertical-align: initial;
  text-align: left;
  line-height: initial;
  color: #0053b3;
  font-weight: normal;
  font-size: inherit;
  background: none;
  border: none;
  border-radius: 0;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  margin: 1.25rem 0;
}

.c6:focus,
.c6:hover,
.c6:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 0.25rem;
}

.c2 {
  -webkit-flex-basis: 25rem;
  -ms-flex-preferred-size: 25rem;
  flex-basis: 25rem;
  margin-right: 1.25rem;
}

.c3 {
  margin-right: 1.25rem;
}

.c1 {
  font-weight: 700;
}

.c5 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  padding: 0;
  vertical-align: initial;
  text-align: left;
  line-height: initial;
  color: #0053b3;
  font-weight: normal;
  font-size: inherit;
  background: none;
  border: none;
  border-radius: 0;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  margin-left: 1.25rem;
  font-size: 0.875rem;
}

.c5:focus,
.c5:hover,
.c5:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div>
  <p>
    Les congés maternité, arrêts de travail liés à une maladie professionnelle, congés individuel de formation (Cif) et stage de fin d’étude de plus de 2 mois ne sont pas considérés comme des absences. Merci de ne pas les renseigner.
  </p>
  <div
    class="c0"
  >
    <div
      class="c1 c2"
    >
      Motif
    </div>
    <div
      class="c1 c3"
    >
      Durée (en mois)
    </div>
  </div>
  <div
    class="c0"
  >
    <div
      class="c2"
    >
      <select
        name="absences[0].type"
      >
        <option>
          Absence pour maladie non professionnelle
        </option>
        <option>
          Grève
        </option>
        <option>
          Mise à pied
        </option>
        <option>
          Congé sabbatique
        </option>
        <option>
          Congé pour création d'entreprise
        </option>
        <option>
          Congé de solidarité familiale
        </option>
        <option>
          Congé de solidarité internationale
        </option>
        <option>
          Congé parental d'éducation
        </option>
        <option>
          Congé de proche aidant
        </option>
        <option>
          Congés sans solde
        </option>
        <option>
          Arrêt maladie lié à un accident de trajet
        </option>
      </select>
    </div>
    <div
      class="c3"
    >
      <input
        class="c4"
        name="absences[0].duration"
        size="7"
        value=""
      />
      <button
        aria-pressed="false"
        class="c5"
        type="button"
      >
        Supprimer
      </button>
    </div>
  </div>
  <button
    aria-pressed="false"
    class="c6"
    type="button"
  >
    Ajouter une période
  </button>
</div>
`;

exports[`<AbsencePeriods /> should delete a period 1`] = `
.c4 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  padding: 0;
  vertical-align: initial;
  text-align: left;
  line-height: initial;
  color: #0053b3;
  font-weight: normal;
  font-size: inherit;
  background: none;
  border: none;
  border-radius: 0;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  margin: 1.25rem 0;
}

.c4:focus,
.c4:hover,
.c4:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 0.25rem;
}

.c2 {
  -webkit-flex-basis: 25rem;
  -ms-flex-preferred-size: 25rem;
  flex-basis: 25rem;
  margin-right: 1.25rem;
}

.c3 {
  margin-right: 1.25rem;
}

.c1 {
  font-weight: 700;
}

<div>
  <p>
    Les congés maternité, arrêts de travail liés à une maladie professionnelle, congés individuel de formation (Cif) et stage de fin d’étude de plus de 2 mois ne sont pas considérés comme des absences. Merci de ne pas les renseigner.
  </p>
  <div
    class="c0"
  >
    <div
      class="c1 c2"
    >
      Motif
    </div>
    <div
      class="c1 c3"
    >
      Durée (en mois)
    </div>
  </div>
  <button
    aria-pressed="false"
    class="c4"
    type="button"
  >
    Ajouter une période
  </button>
</div>
`;

exports[`<AbsencePeriods /> should render 1`] = `
.c4 {
  padding: 0;
  font-size: 1rem;
  text-align: left;
  line-height: inherit;
  width: 7em;
  border-radius: 0.25rem;
  border: 1px solid #c9d3df;
  padding: 0.625rem 0.25rem;
  border-color: #c9d3df;
}

.c4::-webkit-outer-spin-button,
.c4::-webkit-inner-spin-button {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  margin: 0;
}

.c6 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  padding: 0;
  vertical-align: initial;
  text-align: left;
  line-height: initial;
  color: #0053b3;
  font-weight: normal;
  font-size: inherit;
  background: none;
  border: none;
  border-radius: 0;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  margin: 1.25rem 0;
}

.c6:focus,
.c6:hover,
.c6:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 0.25rem;
}

.c2 {
  -webkit-flex-basis: 25rem;
  -ms-flex-preferred-size: 25rem;
  flex-basis: 25rem;
  margin-right: 1.25rem;
}

.c3 {
  margin-right: 1.25rem;
}

.c1 {
  font-weight: 700;
}

.c5 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  padding: 0;
  vertical-align: initial;
  text-align: left;
  line-height: initial;
  color: #0053b3;
  font-weight: normal;
  font-size: inherit;
  background: none;
  border: none;
  border-radius: 0;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  margin-left: 1.25rem;
  font-size: 0.875rem;
}

.c5:focus,
.c5:hover,
.c5:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div>
  <p>
    Les congés maternité, arrêts de travail liés à une maladie professionnelle, congés individuel de formation (Cif) et stage de fin d’étude de plus de 2 mois ne sont pas considérés comme des absences. Merci de ne pas les renseigner.
  </p>
  <div
    class="c0"
  >
    <div
      class="c1 c2"
    >
      Motif
    </div>
    <div
      class="c1 c3"
    >
      Durée (en mois)
    </div>
  </div>
  <div
    class="c0"
  >
    <div
      class="c2"
    >
      <select
        name="absences[0].type"
      >
        <option>
          Absence pour maladie non professionnelle
        </option>
        <option>
          Grève
        </option>
        <option>
          Mise à pied
        </option>
        <option>
          Congé sabbatique
        </option>
        <option>
          Congé pour création d'entreprise
        </option>
        <option>
          Congé de solidarité familiale
        </option>
        <option>
          Congé de solidarité internationale
        </option>
        <option>
          Congé parental d'éducation
        </option>
        <option>
          Congé de proche aidant
        </option>
        <option>
          Congés sans solde
        </option>
        <option>
          Arrêt maladie lié à un accident de trajet
        </option>
      </select>
    </div>
    <div
      class="c3"
    >
      <input
        class="c4"
        name="absences[0].duration"
        size="7"
        value="3"
      />
      <button
        aria-pressed="false"
        class="c5"
        type="button"
      >
        Supprimer
      </button>
    </div>
  </div>
  <button
    aria-pressed="false"
    class="c6"
    type="button"
  >
    Ajouter une période
  </button>
</div>
`;
